--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@ html, body {
     margin: 0;
     padding: 0;
 }
-a {
-  cursor: pointer;
-  text-decoration: none;
+a,
+a label {
+    cursor: pointer;
+    text-decoration: none;
 }
 p {
-  padding: 8px 0px;
+  padding: 16px 0px;
 }
 /* ALL DIVS GIVEN BORDER-BOX to avoid redundancy in code and to make formatting consistent when adding padding! */
 div {
@@ -34,7 +35,7 @@ button > a {
 .both-heroes {
   display: flex;
   flex-direction: row;
-  padding: 90px 0px 90px 0px;
+  padding: 80px 0px 80px 0px;
   flex-wrap: wrap; 
   justify-content: center;
   align-items: flex-start;
@@ -59,7 +60,7 @@ button > a {
   flex-direction: column;
   /* TIP! Justify content is used to vertically align in this case since flex direction is column. */
   justify-content: center;
-  padding-right: 30px;
+  padding-right: 40px;
   padding-bottom: 30px;
   max-width: 453px;
 }
@@ -88,11 +89,21 @@ button > a {
   justify-content: center;
 }
 .second-container {
-  padding: 20px 0px 80px 0px;
+  padding: 20px 0px 50px 0px;
 }
 .third-container {
-  background-color: #E5E7EB;
-  padding: 110px 15rem;
+  /* background-color: #E5E7EB; */
+  background-image: url('./images/ice.jpg');
+  /* source https://wallpaperscraft.com/download/background_ice_light_shadow_75683/1920x1080 */
+width: 100%;
+height: 100%;
+background-size: cover;
+background-attachment: fixed;
+background-repeat:no-repeat;
+
+
+
+  padding: 300px 15rem;
 }
 .fourth-container {
   margin: 100px 0px;
@@ -111,7 +122,7 @@ button > a {
   align-items: center;
   width: 180px;
   text-align: center;
-  gap: 20px;
+  gap: 5px;
 }
 .tank p {
     color: #063441;
@@ -142,7 +153,7 @@ button > a {
     width: 450px;
     height: 225px;
 }
-.header h3 {
+.header h3 > a {
     font-size: 24px;
     color: #74ccd4;
     margin: 0px;
@@ -153,19 +164,19 @@ button > a {
     font-style: italic;
     font-weight: 300;
     font-size: 36px;
-    color: #063441;
+    color: white;
     /* padding: 0px 110px; */
     margin: 0px;
 }
 .signature {
   display: flex;
   justify-content: flex-end;
-  padding: 20px 32px 0px 0px;
+  padding: 0px 32px 0px 0px;
 
 }
 .signature h1 {
     font-size: 24px;
-    color: #063441;
+    color: white;
     margin: 0px;
 }
 /* .left-hero button {
@@ -181,7 +192,7 @@ button > a {
     display: inline-block;
     font-size: 16px;
     font-weight: 700;
-    width: 113px;
+    width: 180px;
   }
 
   .left-hero button a, .blue-notice button a {
